tests/error/0018.exl
{
    a = 1,
    inherit a
            ^ERROR
}
